template/components/dgraph_ec2.yml
DGraphEC2:
  Type: AWS::EC2::Instance
  Properties:
    ImageId: ami-0a887e401f7654935
    InstanceType: t3.medium
    IamInstanceProfile: !Ref DGraphSSMAgentProfile
    SecurityGroupIds:
      - !Ref DGraphSecurityGroup
    SubnetId: !Ref DGraphPrivateSubnet
    UserData:
      Fn::Base64: !Sub |
        #!\/bin\/bash
        curl https:\/\/get.dgraph.io -sSf | bash
        echo "[Unit]
        Description=dgraph.io data server
        Wants=network.target
        After=network.target dgraph-zero.service
        Requires=dgraph-zero.service
        [Service]
        Type=simple
        ExecStart=\/usr\/local\/bin\/dgraph alpha --my=localhost:7080 --zero=localhost:5080
        StandardOutput=journal
        StandardError=journal
        [Install]
        WantedBy=multi-user.target" > \/etc\/systemd\/system\/dgraph.service
        echo "[Unit]
        Description=dgraph.io zero server
        Wants=network.target
        After=network.target
        [Service]
        Type=simple
        ExecStart=\/usr\/local\/bin\/dgraph zero --my=localhost:5080
        StandardOutput=journal
        StandardError=journal
        [Install]
        WantedBy=multi-user.target
        RequiredBy=dgraph.service" > \/etc\/systemd\/system\/dgraph-zero.service
        systemctl daemon-reload
        systemctl enable --now dgraph
    Tags:
      - Key: Name
        Value: !Sub "DGraph-${Stage}"

DGraphVPCEndpoint:
  Type: AWS::EC2::VPCEndpoint
  Properties:
    VpcId: !Ref DGraphVPC
    ServiceName: !Sub "com.amazonaws.${AWS::Region}.ec2"
    VpcEndpointType: Interface
    PrivateDnsEnabled: true
    SecurityGroupIds:
      - !Ref DGraphSecurityGroup
    SubnetIds:
      - !Ref DGraphPrivateSubnet

DGraphSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupName: !Sub "DGraphSecurityGroup-${Stage}"
    GroupDescription: DGraph Security Group
    VpcId: !Ref DGraphVPC
    SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8000
        ToPort: 8000
        CidrIp: 0.0.0.0\/0
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0\/0
      - IpProtocol: tcp
        FromPort: 9080
        ToPort: 9080
        CidrIp: 0.0.0.0\/0
