template/components/dgraph_network.yml
DGraphVPC:
  Type: AWS::EC2::VPC
  Properties:
    CidrBlock: 10.0.0.0\/16
    EnableDnsSupport: true
    EnableDnsHostnames: true

DGraphPrivateSubnet:
  Type: AWS::EC2::Subnet
  Properties:
    VpcId: !Ref DGraphVPC
    CidrBlock: 10.0.1.0\/24
    AvailabilityZone: !Select [0, !GetAZs ""]

DGraphPublicSubnet:
  Type: AWS::EC2::Subnet
  Properties:
    VpcId: !Ref DGraphVPC
    CidrBlock: 10.0.2.0\/24
    AvailabilityZone: !Select [0, !GetAZs ""]
    MapPublicIpOnLaunch: true

DGraphInternetGateway:
  Type: AWS::EC2::InternetGateway

DGraphGatewayAttachment:
  Type: AWS::EC2::VPCGatewayAttachment
  Properties:
    VpcId: !Ref DGraphVPC
    InternetGatewayId: !Ref DGraphInternetGateway

DGraphPublicIP:
  Type: AWS::EC2::EIP
  Properties:
    Domain: vpc

DGraphVPCPublicRouteTable:
  Type: AWS::EC2::RouteTable
  Properties:
    VpcId: !Ref DGraphVPC

DGraphVPCPrivateRouteTable:
  Type: AWS::EC2::RouteTable
  Properties:
    VpcId: !Ref DGraphVPC

DGraphPublicSubnetRouteTableAssociation:
  Type: AWS::EC2::SubnetRouteTableAssociation
  Properties:
    RouteTableId: !Ref DGraphVPCPublicRouteTable
    SubnetId: !Ref DGraphPublicSubnet

DGraphPrivateSubnetRouteTableAssociation:
  Type: AWS::EC2::SubnetRouteTableAssociation
  Properties:
    RouteTableId: !Ref DGraphVPCPrivateRouteTable
    SubnetId: !Ref DGraphPrivateSubnet

DGraphPublicRoute:
  Type: AWS::EC2::Route
  DependsOn: DGraphGatewayAttachment
  Properties:
    RouteTableId: !Ref DGraphVPCPublicRouteTable
    DestinationCidrBlock: 0.0.0.0\/0
    GatewayId: !Ref DGraphInternetGateway

DGraphNATGateway:
  Type: AWS::EC2::NatGateway
  Properties:
    SubnetId: !Ref DGraphPublicSubnet
    AllocationId: !GetAtt DGraphPublicIP.AllocationId

DGraphPrivateRouteToNAT:
  Type: AWS::EC2::Route
  DependsOn: DGraphNATGateway
  Properties:
    RouteTableId: !Ref DGraphVPCPrivateRouteTable
    DestinationCidrBlock: 0.0.0.0\/0
    NatGatewayId: !Ref DGraphNATGateway
